// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Exhibit component should change background color 1`] = `
<div>
  <div
    class="base-canvas"
    style="position: relative; width: 100%; height: 100%; overflow: hidden; background: rgb(0, 128, 128);"
  >
    <canvas
      style="display: block;"
    />
  </div>
</div>
`;

exports[`Exhibit component should mount without errors 1`] = `
<div>
  <div
    class="base-canvas "
    style="position: relative; width: 100%; height: 100%; overflow: hidden; background: rgb(240, 240, 240);"
  >
    <canvas
      style="display: block;"
    />
  </div>
</div>
`;
